<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <Spinner
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner">

        </Spinner>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="10dp">

            <Button
                android:id="@+id/start_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/start_service" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/play_button"
                android:text="@string/play_button"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/start_service" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/resume_button"
                android:text="@string/resume_button"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/play_button"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="10dp">

            <Button
                android:id="@+id/stop_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/stop_service" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/stop_button"
                android:text="@string/stop_button"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/stop_service" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pause_button"
                android:text="@string/pause_button"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/stop_button"/>
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>
